# opensync-kdepim

./: AUTHORS  CMakeLists.txt
src/: CMakeLists.txt  datasource.cpp  datasource.h  kaddrbook.cpp  kaddrbook.h  kcal.cpp  kcal.h  kdepim-sync  kdepim-sync-capabilities.xml  kdepim-sync-description.xml  kdepim_sync.cpp  knotes.cpp  knotes.h
